<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCotacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCotacoes"
        android:textSize="36sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="14dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblBovespa"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
        />
    <TextView
        android:id="@+id/tvIndiceBovespa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblIndice"
        />

    <TextView
        android:id="@+id/tvVariacaoBovespa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblVariacao"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDolar"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
        />
    <TextView
        android:id="@+id/tvCotacaoDolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCotacao"
        />

    <TextView
        android:id="@+id/tvVariacaoDolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblVariacao"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Euro"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
        />
    <TextView
        android:id="@+id/tvCotacaoEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCotacao"

        />

    <TextView
        android:id="@+id/tvVariacaoEuro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblVariacao"
        />

    <TextView
        android:id="@+id/tvAtualizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAtualizacao"
        android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"

        />

    <Button
        android:id="@+id/btAtualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblAtualizar"
        android:layout_marginTop="@dimen/abc_action_bar_content_inset_material"
        />

</LinearLayout>
